# advanced-analytics-ai

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  _fix_agent.py  _fix_agents.py  _fix_imports.py  _rewrite_imports.py  _rewrite_tests.py  _write_inits.py  databricks.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
agents/: __init__.py
business_problems/: initial_spec.md  loadmaster-allocation-spec.md  optimization_problem_formulation.md  optimization_problem_formulation_lp.md  ramp_resource_minimization_formulation.md  ramp_resource_minimization_spec.md
data/: finavia_flights_efhk_20260327.csv  finavia_flights_efhk_20260330.csv
mcp/: __init__.py
notebooks/csp/: chapter6.1.ipynb  chapter6.ipynb  csp.ipynb
notebooks/logic/: chapter7.ipynb  dpll_tracer.ipynb  logic.ipynb  tt_check_all_tracer.ipynb
notebooks/lp/: ramp_resource_lp.ipynb
notebooks/ml/: learning.ipynb
notebooks/neural_nets/: neural_nets.ipynb
notebooks/planning/: PLANNING_GROUND_HANDLING.md  gh_planner.ipynb  planning.ipynb  planning_angelic_search.ipynb  planning_graphPlan.ipynb  planning_hierarchical_search.ipynb  planning_partial_order_planner.ipynb  planning_total_order_planner.ipynb  ramp_resource_lp.ipynb
notebooks/probability/: probability.ipynb  probability4e.ipynb
notebooks/rl/: mdp.ipynb  (+1 more)
src/: __init__.py
tests/: conftest.py
(+90 files in other folders)
